--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,10 +101,14 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.3'
+
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
 }
