Place Order Api Completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bequem">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -21,7 +20,8 @@
         android:theme="@style/Theme.BEQUEM"
         android:usesCleartextTraffic="true"
         tools:replace="android:theme">
-
+        <activity android:name=".home.activity.DefaultAddressActivity"></activity>
+        <activity android:name=".home.activity.AddAddressActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,7 +36,7 @@
 
         <activity
             android:name=".home.activity.MyLocationActivity"
-            android:label="@string/title_activity_my_location"></activity>
+            android:label="@string/title_activity_my_location" />
         <activity android:name=".utils.BaseActivity" />
         <activity android:name=".home.activity.OrderActivity" />
         <activity android:name=".home.activity.DeliveryAddressActivity" />
