--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:theme="@style/Theme.BEQUEM"
         android:usesCleartextTraffic="true"
         tools:replace="android:theme">
-        <activity android:name=".home.activity.DefaultAddressActivity"></activity>
+        <activity android:name=".home.activity.OrderedItemsActivity"></activity>
+        <activity android:name=".home.activity.CartActivity" />
+        <activity android:name=".home.activity.DefaultAddressActivity" />
         <activity android:name=".home.activity.AddAddressActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
